force-app/main/default/objects/Employee_Cost_Centre__c/Employee_Cost_Centre__c.object-meta.xml
<CustomObject>
    <label>Employee Cost Centre</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Cost Centre ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Cost Centre</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>