force-app/main/default/objects/Employee_Cost_Centre__c/fields/Adjustment_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Deduction__c</fullName>
    <formula>Payout__r.Adjustment_Deduction__c *Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment(Deduction)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>