force-app/main/default/objects/Employee_Cost_Centre__c/fields/Basic_Salary__c.field-meta.xml
<CustomField>
    <fullName>Basic_Salary__c</fullName>
    <formula>Payout__r.Basic_Salary__c* Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>