force-app/main/default/objects/Employee_Cost_Centre__c/fields/Bonus_AW__c.field-meta.xml
<CustomField>
    <fullName>Bonus_AW__c</fullName>
    <formula>Payout__r.Bonus_AW__c *Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus AW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>