force-app/main/default/objects/Employee_Cost_Centre__c/fields/CDAC__c.field-meta.xml
<CustomField>
    <fullName>CDAC__c</fullName>
    <formula>Payout__r.CDAC__c*Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>