force-app/main/default/objects/Employee_Cost_Centre__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Centre</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centre</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employee Cost Centre (Centre)</relationshipLabel>
    <relationshipName>Employee_Cost_Centre1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>