force-app/main/default/objects/Employee_Cost_Centre__c/fields/Cost_to_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Centre__c</fullName>
    <label>Cost % to Centre</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>