force-app/main/default/objects/Employee_Cost_Centre__c/fields/Director_Fee__c.field-meta.xml
<CustomField>
    <fullName>Director_Fee__c</fullName>
    <formula>Payout__r.Director_Fee_Roll_Up__c * Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>