force-app/main/default/objects/Employee_Cost_Centre__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employee Cost Centre</relationshipLabel>
    <relationshipName>Employee_Cost_Centre</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>