force-app/main/default/objects/Employee_Cost_Centre__c/fields/EUCF__c.field-meta.xml
<CustomField>
    <fullName>EUCF__c</fullName>
    <formula>Payout__r.EUCF__c*Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUCF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>