force-app/main/default/objects/Employee_Cost_Centre__c/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <formula>Payout__r.Gross_Amount__c  * Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>