force-app/main/default/objects/Employee_Cost_Centre__c/fields/Housing_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Housing_Allowance__c</fullName>
    <formula>Payout__r.Housing_Allowance__c* Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>