force-app/main/default/objects/Employee_Cost_Centre__c/fields/Leave_Encashment__c.field-meta.xml
<CustomField>
    <fullName>Leave_Encashment__c</fullName>
    <formula>Payout__r.Leave_Encashment__c * Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Encashment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>