force-app/main/default/objects/Employee_Cost_Centre__c/fields/MBMF__c.field-meta.xml
<CustomField>
    <fullName>MBMF__c</fullName>
    <formula>Payout__r.MBMF__c*Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MBMF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>