force-app/main/default/objects/Employee_Cost_Centre__c/fields/No_Pay_Leave__c.field-meta.xml
<CustomField>
    <fullName>No_Pay_Leave__c</fullName>
    <formula>Payout__r.No_Pay_Leave__c * Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Pay Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>