force-app/main/default/objects/Employee_Cost_Centre__c/fields/NS_Make_up_Pay__c.field-meta.xml
<CustomField>
    <fullName>NS_Make_up_Pay__c</fullName>
    <formula>Payout__r.NS_Make_up_Pay__c  * Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Make-up Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>