force-app/main/default/objects/Employee_Cost_Centre__c/fields/Overtime_Variable__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Variable__c</fullName>
    <formula>Payout__r.Overtime_Variable__c * Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime Variable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>