force-app/main/default/objects/Employee_Cost_Centre__c/fields/Payout__c.field-meta.xml
<CustomField>
    <fullName>Payout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payout</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Payout__c.Employee_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Employee__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payout__c</referenceTo>
    <relationshipLabel>Employee Cost Centre</relationshipLabel>
    <relationshipName>Employee_Cost_Centre</relationshipName>
    <type>Lookup</type>
</CustomField>