force-app/main/default/objects/Employee_Cost_Centre__c/fields/Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Payout_Date__c</fullName>
    <formula>Payout__r.Payout_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payout Date</label>
    <type>Date</type>
</CustomField>