force-app/main/default/objects/Employee_Cost_Centre__c/fields/Referral_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Referral_Bonus__c</fullName>
    <formula>Payout__r.Referral_Bonus__c * Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>