force-app/main/default/objects/Employee_Cost_Centre__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <formula>Payout__r.Salary__c*Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>