force-app/main/default/objects/Employee_Cost_Centre__c/fields/SDL__c.field-meta.xml
<CustomField>
    <fullName>SDL__c</fullName>
    <formula>Payout__r.SDL__c*Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>