force-app/main/default/objects/Employee_Cost_Centre__c/fields/SINDA__c.field-meta.xml
<CustomField>
    <fullName>SINDA__c</fullName>
    <formula>Payout__r.SINDA__c*Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SINDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>