force-app/main/default/objects/Employee_Cost_Centre__c/fields/Total_AW_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_AW_Amount__c</fullName>
    <formula>Payout__r.Total_AW_Amount__c*Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total AW Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>