force-app/main/default/objects/Employee_Cost_Centre__c/fields/Total_Cost_to_the_Company__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_to_the_Company__c</fullName>
    <formula>Payout__r.Total_Cost_to_the_Company__c  * Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost to the Company</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>