force-app/main/default/objects/Employee_Cost_Centre__c/fields/Total_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable__c</fullName>
    <formula>Payout__r.Total_Payable__c*Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>