force-app/main/default/objects/Employee_Cost_Centre__c/fields/Transport_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Transport_Allowance__c</fullName>
    <formula>Payout__r.Transport_Allowance__c*Cost_to_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>